Dragging images from google images to Preview is broken after bug 1985538
Categories
(Core :: Widget, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr140 | --- | unaffected |
| firefox144 | --- | verified |
| firefox145 | --- | verified |
| firefox146 | --- | verified |
People
(Reporter: spohl.mozilla.bugs, Assigned: spohl.mozilla.bugs)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(2 files)
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
|
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-release+
|
Details | Review |
Bug 1985538 broke the ability to drag images into Preview, which was introduced in bug 1948388.
Comment 1•9 months ago
|
||
Set release status flags based on info from the regressing bug 1985538
Comment 2•9 months ago
|
||
:spohl, not sure what your timeline looks like for a fix, but we have a planned Fx144 dot release next week.
Deadline for uplift requests is EOD Friday 2025-10-24. If you have something low risk in time, we could aim to include it.
| Assignee | ||
Comment 3•9 months ago
|
||
I have verified that all previous bugs and known regressions continue to work as expected after this patch, namely: bug 1802163, bug 1948388, bug 1983136 and bug 1985538.
| Assignee | ||
Comment 4•9 months ago
|
||
(In reply to Donal Meehan [:dmeehan] from comment #2)
:spohl, not sure what your timeline looks like for a fix, but we have a planned Fx144 dot release next week.
Deadline for uplift requests is EOD Friday 2025-10-24. If you have something low risk in time, we could aim to include it.
Thank you for the heads up. This is an embarrassingly simple and low-risk fix and we should include it if at all possible. I will submit uplift requests as soon as the patch clears review.
Comment 5•9 months ago
|
||
firefox-release Uplift Approval Request
- User impact if declined: Dragging images from Firefox and dropping them into third-party apps such as Preview on macOS may be broken or behave unexpectedly.
- Code covered by automated testing: no
- Fix verified in Nightly: no
- Needs manual QE test: yes
- Steps to reproduce for manual QE testing: Drag an image from Firefox and drop it on the Preview Dock icon. The image should open in Preview.
- Risk associated with taking this patch: low
- Explanation of risk level: This fix addresses an accidental logic inversion that prevented us from using a fallback path for dragged image files. This was missed during development and review of the patch in bug 1985538.
- String changes made/needed: none
- Is Android affected?: no
| Assignee | ||
Comment 6•9 months ago
|
||
I have verified that all previous bugs and known regressions continue to work as expected after this patch, namely: bug 1802163, bug 1948388, bug 1983136 and bug 1985538.
Original Revision: https://phabricator.services.mozilla.com/D269279
Comment 7•9 months ago
|
||
It will need a beta uplift request also for Fx145
| Assignee | ||
Comment 8•9 months ago
|
||
Comment on attachment 9521174 [details]
Bug 1995345: Fix typo in patch for bug 1985538 that broke dragging of images to Preview and other macOS apps. r=#mac-reviewers
Beta/Release Uplift Approval Request
- User impact if declined/Reason for urgency: Dragging images from Firefox and dropping them into third-party apps such as Preview on macOS may be broken or behave unexpectedly.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Drag an image from Firefox and drop it on the Preview Dock icon. The image should open in Preview.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This fix addresses an accidental logic inversion that prevented us from using a fallback path for dragged image files. This was missed during development and review of the patch in bug 1985538.
- String changes made/needed: none
- Is Android affected?: No
Comment 9•9 months ago
|
||
:spohl, do you plan on landing this today?
It could make the 145.0b6 beta build if it lands today.
| Assignee | ||
Comment 10•9 months ago
|
||
(In reply to Donal Meehan [:dmeehan] from comment #9)
:spohl, do you plan on landing this today?
It could make the 145.0b6 beta build if it lands today.
I could have sworn that I had this queued for landing. Thanks for pinging me! It is queued now.
Comment 11•9 months ago
|
||
Comment 12•9 months ago
|
||
| bugherder | ||
Updated•9 months ago
|
Comment 13•9 months ago
|
||
| uplift | ||
Updated•9 months ago
|
Updated•9 months ago
|
Updated•9 months ago
|
Comment 14•9 months ago
|
||
Hello! Reproduced the issue with Firefox 145.0b5 on macO 14 arm. Dragging an image from imgur to Preview will not open it in Preview.
The issue is verified fixed with Firefox 146.0a1 (2025-10-23) on macOS 14 arm. Dragging an image from Firefox to Preview Dock icon will open it in Preview.
Updated•9 months ago
|
Updated•9 months ago
|
Comment 15•9 months ago
|
||
| uplift | ||
Comment 16•9 months ago
•
|
||
The issue is verified fixed with Firefox 145.0b6 on macOS 14 and 26 arm. Dragging an image from Firefox to the Preview Dock icon will open it in Preview.
Comment 17•9 months ago
|
||
Verified fixed with Firefox 144.0.2 on macOS 14 and 26 arm. Dragging an image from Firefox to the Preview Dock icon will open it in Preview.
Description
•