Bug 1995345: Fix typo in patch for bug 1985538 that broke dragging of images to Preview and other macOS apps. r=mac-reviewers,mstange

I have verified that all previous bugs and known regressions continue to work as expected after this patch, namely: bug 1802163, bug 1948388, bug 1983136 and bug 1985538.

Differential Revision: https://phabricator.services.mozilla.com/D269279