widget/cocoa/nsCocoaWindow.mm
@@ -3884,7 +3884,7 @@ static NSURL* GetPasteLocation(NSPasteboard* aPasteboard, bool aUseFallback) {
     return [(NSURL*)urlRef autorelease];
   }
 
-  if (aUseFallback) {
+  if (!aUseFallback) {
     return nil;
   }
 
